# sms_forwarder_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  azure-pipelines.yml  docker-compose-dev.yml  docker-compose.yml  docker-compost.yml  justfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
bot/: load_django.py  models.py  setwebhook.py  singleton.py  tests.py  tgbot.py  views.py
bot/migrations/: 0001_initial.py  0002_multiple_codes.py
config/: development.env  production.env
configs/: development.env  docker-entrypoint.sh  production.env  uwsgi.ini
ekspeditur/: urls.py
forwarder/: settings.py  urls.py  wsgi.py
migrations/: 20250116042350_init.sql
src/: commands.rs  config.rs  handlers.rs  http.rs  main.rs  queries.rs  setup.rs
