[tool.poetry]
name = "sms_forwarder_bot"
version = "0.3.0"
description = "A bot/broker that forwards SMS messages to telegram chats. Intended to be used together with the app."
authors = ["OptimalStrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.8"
pyTelegramBotAPI = "^3.7.6"
psycopg2-binary = "^2.8.6"
six = "^1.15.0"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
